2000-04-06  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c: if we cannot load the font we'd like to use,
	use the gtk+ default font. Fixes bug #8359.
	
	* app/about_dialog.c
	* app/install.c: properly ref/unref fonts

	* app/text_tool.[ch]: code cleanup (do not rely on TRUE being 1)

	* app/tips_dialog.c: code cleanup and less resizing

2000-04-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/ps.c: applied patch provided by Peter
	Kirchgessner, which sets the default rotation back to 0 and
	adds %%BeginData/%%EndData comments on save.
	
2000-04-05  Nick Lamb <njl195@zepler.org.uk>

	* plug-ins/common/pat.c: Don't claim to export ALPHA or to be
	suitable for RGB*, GREY* - this plug-in creates flat patterns

Tue Apr  4 17:33:40 PDT 2000 Manish Singh <yosh@gimp.org>

	* gimptool.in: resync the variable names. Fixes #8360

2000-04-05  Michael Natterer  <mitch@gimp.org>

	* app/layers_dialog.c: oops, yesterday's "cleanups" contained an
	unreverted hack I've tried which caused a SEGV with floating
	selections. Fixed now.

Mon Apr  3 17:55:04 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	On request of Martin Weber <martweb@gmx.net>:
	* libgimp/gimputils.c: Include string.h.

2000-04-03  Michael Natterer  <mitch@gimp.org>

	* app/color_panel.[ch]
	* app/color_picker.c
	* app/qmask.c: removed the public function color_panel_free() and
	fake a real widget's behaviour by connecting to the panel widget's
	"destroy" signal.

	* app/channels_dialog.c
	* app/layers_dialog.c: cleaned up and sync'ed the code where
	possible (without changing the logic).

2000-04-03  Michael Natterer  <mitch@gimp.org>

	* app/channels_dialog.c
	* app/layers_dialog.c: when dropping layers/channels around in the
	stack, Gtk sometimes continues searching a drag destination
	_after_ the drop callback has been called (which is probably a
	bug), causing a SEGV because the callback changed the GtkList
	containing the layer/channel widgets.
