@@ -20,6 +20,9 @@
 
 #include "procedural_db.h"
 
+#include "config.h"
+
+#include <math.h>
 #include <string.h>
 
 #include "apptypes.h"
@@ -32,6 +35,7 @@
 #include "layer.h"
 #include "layer_pvt.h"
 
+#include "libgimp/gimpintl.h"
 #include "libgimp/gimplimits.h"
 
 static ProcRecord image_list_proc;
@@ -3451,9 +3455,15 @@ image_set_resolution_invoker (Argument *args)
 
   if (success)
     {
-      if (xresolution < GIMP_MIN_RESOLUTION || xresolution > GIMP_MAX_RESOLUTION ||
-	  yresolution < GIMP_MIN_RESOLUTION || yresolution > GIMP_MAX_RESOLUTION)
-	success = FALSE;
+      if (isnan (xresolution) || xresolution < GIMP_MIN_RESOLUTION || 
+	  isinf (xresolution) || xresolution > GIMP_MAX_RESOLUTION ||
+	  isnan (yresolution) || yresolution < GIMP_MIN_RESOLUTION || 
+	  isinf (yresolution) || yresolution > GIMP_MAX_RESOLUTION)
+	{
+	  g_message (_("Image resolution is out of bounds,\n" 
+		       "using the default resolution instead."));
+	  success = FALSE;
+	}
       else
 	{
 	  gimage->xresolution = xresolution;
