@@ -1212,9 +1212,15 @@ HELP
 
     $invoke{code} = <<'CODE';
 {
-  if (xresolution < GIMP_MIN_RESOLUTION || xresolution > GIMP_MAX_RESOLUTION ||
-      yresolution < GIMP_MIN_RESOLUTION || yresolution > GIMP_MAX_RESOLUTION)
-    success = FALSE;
+  if (isnan (xresolution) || xresolution < GIMP_MIN_RESOLUTION || 
+      isinf (xresolution) || xresolution > GIMP_MAX_RESOLUTION ||
+      isnan (yresolution) || yresolution < GIMP_MIN_RESOLUTION || 
+      isinf (yresolution) || yresolution > GIMP_MAX_RESOLUTION)
+    {
+      g_message (_("Image resolution is out of bounds,\n" 
+                   "using the default resolution instead."));
+      success = FALSE;
+    }
   else
     {
       gimage->xresolution = xresolution;
@@ -1417,7 +1423,8 @@ CODE
 }
 
 
-@headers = qw(<string.h> "gimage.h" "libgimp/gimplimits.h");
+@headers = qw("config.h" <string.h> <math.h> "gimage.h" 
+	      "libgimp/gimpintl.h" "libgimp/gimplimits.h");
 
 $extra{app}->{code} = <<'CODE';
 /* Yuup, this is somewhat unsmooth, to say the least */
